k8s-manifests/contig-alias/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: contig-alias
  labels:
    app: contig-alias
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8080
    targetPort: 8080
    protocol: TCP
  - name: management
    port: 9090
    targetPort: management
    protocol: TCP
  selector:
    app: contig-alias
